Fixed most of the last section of the lab7 assignment.

--- a/labs/lab7/cs380F2014-lab7.tex
+++ b/labs/lab7/cs380F2014-lab7.tex
@@ -33,9 +33,9 @@ databases, you will learn more about the configuration and use of the HyperSQL d
 
 \section*{Summary of the Required Deliverables}
 
-You and your partner should always use a Git repository, hosted by Bitbucket, to store the source
-code, database files, and all of the other deliverables required by this assignment. The repository must be shared with
-the instructor and the version control log should accurately reflect each student's contribution to this assignment. In
+You and your partner should always use a Git repository, hosted by Bitbucket, to store the source code, XML files,
+benchmark output, and all of the other deliverables required by this assignment. The repository must be shared with the
+course instructor and the version control log should accurately reflect each student's contribution to this assignment. In
 addition, this assignment invites your partnership to submit one printed version of the following deliverables; each
 member should write and submit their own version of the first deliverable. Please see the instructor if you have
 questions about the deliverables that you must turn in for this assignment.
@@ -43,12 +43,12 @@ questions about the deliverables that you must turn in for this assignment.
 % \vspace*{-.05in}
 
 \begin{enumerate}
-    \setlength{\itemsep}{0pt}
+  \setlength{\itemsep}{0pt}
   \item A two paragraph commentary on the work that each team member completed. 
   \item A description of the eXtensible markup language and its features, strengths, and weaknesses.
   \item An explanation of the binary serialization method provided by the Java language.
-    \item The final version of the source code for your serialization benchmarking framework.
-      \item Output from at least five runs of your benchmarks, demonstrating features and correctness.
+  \item The final version of the source code for your serialization benchmarking framework.
+  \item Output from at least five runs of your benchmarks, demonstrating features and correctness.
   \item A detailed report addressing the performance trade-offs associated with serialization.
   \item A reflection on the challenges that you faced when completing this laboratory assignment.
 \end{enumerate}
