Added in the headers for all of the new sections in the lab assignment.

--- a/labs/lab7/cs380F2014-lab7.tex
+++ b/labs/lab7/cs380F2014-lab7.tex
@@ -12,23 +12,23 @@ Applications}
 
 \section*{Introduction}
 
-Chapter 5 of your textbook introduces advanced concepts in the structure query language (SQL), with an initial focus on
-topics like accessing a database from a programming language. In this laboratory assignment, you will leverage the
-example in Figure 5.1 of the textbook to ultimately implement your own database-centric application based on a schema
-that you visualized and manipulated in the past two assignments. In addition to using a simple Java program that uses a
-databases, you will learn more about the configuration and use of the HyperSQL database engine.
+Chapter 23 of your textbook introduces the basics of the eXtensible markup language (XML), explaining how this
+semi-structured approach to data management has been the defacto way to exchange data. In this laboratory assignment,
+you will explore some of the trade-offs associated with the use of XML, with a particular focus on the time and space
+overheads associated with storing data in this format. In particular, you will implement a benchmarking framework that
+can serialize a Java object to both the binary and XML formats.  Finally, you and your partner will write a 
+report that describes and explains the performance trends revealed by your benchmark.
 
 \vspace*{-.05in}
-\section*{Learning About the HyperSQL Database Engine}
-
-
-\vspace*{-.05in}
-\section*{Compiling and Using the FindFile Program}
-
+\section*{Learning About Serialization Methods}
 
 
 \vspace*{-.05in}
-\section*{Implementing a Database-Centric Application}
+\section*{Using Binary and XML Serializers in Java}
+
+
+\vspace*{-.05in}
+\section*{Implementing and Using a Data Serialization Benchmarking}
 
 
 \section*{Summary of the Required Deliverables}
