Updated the title of the lab, section headers, and added new content.

--- a/labs/lab7/cs380F2014-lab7.tex
+++ b/labs/lab7/cs380F2014-lab7.tex
@@ -6,8 +6,7 @@
 \usepackage[compact]{titlesec}
 
 \begin{document}
-\MYTITLE{Laboratory Assignment Seven \\ Implementing and Evaluating Database-Centric
-Applications}
+\MYTITLE{Laboratory Assignment Seven \\ Implementing and Using a Serialization Benchmarking Framework}
 \MYHEADERS{Laboratory Assignment Seven}{Due: November 11, 2014}
 
 \section*{Introduction}
@@ -38,9 +37,22 @@ introduction to the steps that you must take to serialize and deserialize a Java
 \vspace*{-.05in}
 \section*{Using Binary and XML Serializers in Java}
 
+You are your partner should create a Git repository, using Bitbucket, that you can use to complete this laboratory
+assignment.  To start off this project, one of you should go into the ``share'' repository for this course and run the
+``{\tt git pull}'' command. After investigating the directories for this assignment, you will find the {\tt lab7/src/}
+and {\tt lab7/lib/} directories. What files do these directories contain? How does this program work? Please note that
+the provided version of the benchmark does not yet provide the features necessary to evaluate the performance of binary
+and XML serialization---you and your partner will add this code as part of the laboratory assignment.
+
+Make sure that both team members are able to compile and run the current version of the ``{\tt
+  StorageAndRetrievalBenchmark.java}'' program. What output does it produce right now? What is the meaning of this
+output? You should note that the provide Java archive (JAR) files are older versions of XStream; interested students may
+investigate the downloading and installation of the version of this library that was released in February of 2014.
+However, the benchmarks should work correctly with a slightly older version of XStream. Please see the course instructor
+if you are not able to compile and run this preliminary version of the benchmarks.
 
 \vspace*{-.05in}
-\section*{Implementing and Using a Data Serialization Benchmarking}
+\section*{Implementing and Using  Data Serialization Benchmarks}
 
 
 \section*{Summary of the Required Deliverables}
