Fixing a full version of the lab7 assignment.

--- a/labs/lab7/cs380F2014-lab7.tex
+++ b/labs/lab7/cs380F2014-lab7.tex
@@ -37,12 +37,13 @@ introduction to the steps that you must take to serialize and deserialize a Java
 \vspace*{-.05in}
 \section*{Using the Default and XML-Based Serializers in Java}
 
-You are your partner should create a Git repository, using Bitbucket, that you can use to complete this laboratory
+You and your partner should create a Git repository, using Bitbucket, that you can use to complete this laboratory
 assignment.  To start off this project, one of you should go into the ``share'' repository for this course and run the
-``{\tt git pull}'' command. After investigating the directories for this assignment, you will find the {\tt lab7/src/}
-and {\tt lab7/lib/} directories. What files do these directories contain? How does this program work? Please note that
-the provided version of the benchmark does not yet provide the features necessary to evaluate the performance of default 
-and XML serialization---you and your partner will add this code as part of the laboratory assignment.
+``{\tt git pull}'' command. After investigating the directories for this assignment, you will find the ``{\tt
+  lab7/src/}'' and ``{\tt lab7/lib/}'' directories. What files do these directories contain? How does this program work?
+Please note that the provided version of the benchmark does not yet provide the features necessary to evaluate the
+performance of default and XML serialization---you and your partner will add this code as part of the laboratory
+assignment.
 
 Make sure that both team members are able to compile and run the current version of the ``{\tt
   StorageAndRetrievalBenchmark.java}'' program. What output does it produce right now? What is the meaning of this
@@ -61,7 +62,7 @@ generated objects? How big are the files that this method creates?  You should a
 can store and retrieve the same objects. In comparison to the default serializer, how long does it take to produce the
 XML-based representation? How big are the XML files? What are the benefits of using XML for serialization?
 
-After finishing the implementation of your benchmarks, you are your partner should conduct experiments to compare and
+After finishing the implementation of your benchmarks, you and your partner should conduct experiments to compare and
 contrast the performance of the default and XML-based serialization and deserialization methods. Your experiments should
 vary the number and content (e.g., both character and numerical values) of tree nodes in the randomly generated object.
 You should also measure the time overhead associated with storing and retrieving the object and the space overhead
