Fixed the three small mistakes in the lab assignment.

--- a/labs/lab7/cs380F2014-lab7.tex
+++ b/labs/lab7/cs380F2014-lab7.tex
@@ -7,7 +7,7 @@
 
 \begin{document}
 \MYTITLE{Laboratory Assignment Seven \\ Implementing and Using a Serialization Benchmarking Framework}
-\MYHEADERS{Laboratory Assignment Seven}{Due: November 11, 2014}
+\MYHEADERS{Laboratory Assignment Seven}{Due: November 12, 2014}
 
 \section*{Introduction}
 
@@ -41,7 +41,7 @@ You and your partner should create a Git repository, using Bitbucket, that you c
 assignment.  To start off this project, one of you should go into the ``share'' repository for this course and run the
 ``{\tt git pull}'' command. After investigating the directories for this assignment, you will find the ``{\tt
   lab7/src/}'' and ``{\tt lab7/lib/}'' directories. What files do these directories contain? How does this program work?
-Please note that the provided version of the benchmark does not yet provide the features necessary to evaluate the
+Please note that the provided version of the benchmark does not yet include the features necessary to evaluate the
 performance of default and XML serialization---you and your partner will add this code as part of the laboratory
 assignment.
 
@@ -72,8 +72,8 @@ of the serialized files. Finally, you must write a report that analyzes and expl
 
 You and your partner should always use a Git repository, hosted by Bitbucket, to store the source code, XML files,
 benchmark output, and all of the other deliverables required by this assignment. The repository must be shared with the
-course instructor and the version control log should accurately reflect each student's contribution to this assignment. In
-addition, this assignment invites your partnership to submit one printed version of the following deliverables; each
+course instructor and the version control log should accurately reflect each student's contribution to the assignment.
+In addition, this assignment invites your partnership to submit one printed version of the following deliverables; each
 member should write and submit their own version of the first deliverable. Please see the instructor if you have
 questions about the deliverables that you must turn in for this assignment.
 
