Starting to write the content about learning about dom parsing.

--- a/labs/lab8/cs380F2014-lab8.tex
+++ b/labs/lab8/cs380F2014-lab8.tex
@@ -19,9 +19,15 @@ partner will conduct a simple experiment to measure the performance of DOM-based
 describes and explains the empirical trends that you identified.
 
 \vspace*{-.05in}
-\section*{Learning About XML Parsing Methods}
+\section*{Learning More About XML Parsing Methods}
 
-
+In addition to review the aforementioned sections of your textbook---and any of relevant content in Chapter 23---you
+should study the following Web site: \url{http://www.mkyong.com/java/how-to-read-xml-file-in-java-dom-parser/}. We will
+use the simple example provided in this tutorial to start learning about how to parse an XML document.  You should also
+carefully review Oracle's tutorial, called ``Reading XML Data into a DOM'', which is available from
+\url{https://docs.oracle.com/javase/tutorial/jaxp/dom/readingXML.html}. To gain a better understanding of the different
+DOM-based solutions that are available and to ensure that you understand some fundamental trade-offs associated with
+using our chosen DOM parser, you should also read \url{https://docs.oracle.com/javase/tutorial/jaxp/dom/when.html}.
 
 \vspace*{-.05in}
 \section*{Simple DOM-Based Parsing of XML}
