Added the content about simple dom-based xml parsing.

--- a/labs/lab8/cs380F2014-lab8.tex
+++ b/labs/lab8/cs380F2014-lab8.tex
@@ -35,11 +35,16 @@ using our chosen DOM parser, you should also read \url{https://docs.oracle.com/j
 You and your partner should create a Git repository, using Bitbucket, that you can use to complete this laboratory
 assignment.  To start off this project, one of you should go into the ``share'' repository for this course and run the
 ``{\tt git pull}'' command. After investigating the directories for this assignment, you will find the ``{\tt
-  lab7/src/}'' and ``{\tt lab7/lib/}'' directories. What files do these directories contain? How does this program work?
-Please note that the provided version of the benchmark does not yet include the features necessary to evaluate the
-performance of default and XML serialization---you and your partner will add this code as part of the laboratory
-assignment.
+  lab8/}'' directory. What files does this directory contain?  Please see the course instructor if your repository does
+not have two XML files and two Java programs.
 
+You are your partner should used a text editor, like GVim, to view the file called ``{\tt staff.xml}''.  What are the
+contents of this file?  Next, you should use GVim to customize the contents of this file so that they correspond to
+staff members at Allegheny College---you can take a guess for any attributes of a staff member that you do not know.  In
+addition, you are welcome to add in additional data and meta-data as long as it adheres to the standard set forth in the
+original version of ``{\tt staff.xml}''. Now, you should compile and run the program called ``{\tt
+  ReadXMLFileWithDOM.java}'' How does this program work? What are the limitations associated with this program's
+implementation? What is the output of this program? Does the program seem to work correctly?
 
 \vspace*{-.05in}
 \section*{Using and Extending a Comprehensive XML Parser}
@@ -60,7 +65,7 @@ questions about the deliverables that you must turn in for this laboratory assig
   \setlength{\itemsep}{0pt}
   \item A two paragraph commentary on the work that each team member completed. 
   \item A description of DOM-based XML parsing, examining its features, strengths, and weaknesses.
-  \item 
+  \item A discussion of how XML normalization can influence the output of a DOM-based XML parser.
   \item 
   \item Output from at least five runs of 
   \item A detailed report addressing the performance trends associated with DOM-based XML parsing.
