Adding more content, updating the list of the deliverables.

--- a/labs/lab8/cs380F2014-lab8.tex
+++ b/labs/lab8/cs380F2014-lab8.tex
@@ -65,10 +65,10 @@ questions about the deliverables that you must turn in for this laboratory assig
   \setlength{\itemsep}{0pt}
   \item A two paragraph commentary on the work that each team member completed. 
   \item A description of DOM-based XML parsing, examining its features, strengths, and weaknesses.
-  \item A discussion of how XML normalization can influence the output of a DOM-based XML parser.
-  \item 
-  \item Output from at least five runs of 
-  \item A detailed report addressing the performance trends associated with DOM-based XML parsing.
+  \item A discussion of how normalization can influence the output of a DOM-based XML parser.
+  \item The final version of the {\tt staff.xml} XML file that you customized and extended as appropriate.
+  \item The output from running the {\tt ReadXMLFileWithDOM} program in the terminal window.
+  \item A report addressing the performance trends associated with DOM-based XML parsing.
   \item A reflection on the challenges that you faced when completing this laboratory assignment.
 \end{enumerate}
 \vspace*{-.05in}
